--- a/src/less/form.less
+++ b/src/less/form.less
@@ -543,6 +543,11 @@ select[multiple].input-lg {
 .form-edit {
   width: 100%;
   margin: 20px 0;
+  label{
+    &.info{
+      color: #555555;
+    }
+  }
 }
 
 fieldset{
